--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
-		
+
 	</head>
 	<body>
 
-		
+
 			<div class="page-header">
 				<h1 id="timeline">Timeline</h1>
 			</div>
@@ -15,7 +15,7 @@
 				<li class="timeline-inverted">
 				  <div class="timeline-button"></i></div>
 				  <div class="timeline-panel">
-				  <img src="C:/Users/Manuel/Pictures/300750.jpg" alt="Bild" >
+				  <!--<img src="C:/Users/Manuel/Pictures/300750.jpg" alt="Bild" >-->
 					<div class="timeline-heading">
 					  <h4 class="timeline-title">Leben des Gründers Jim Jones</h4>
 					</div>
@@ -32,7 +32,7 @@
 					</div>
 					<div class="timeline-body">
 					  <p>1955 gründete Jim Jones eine Sekte mit dem Namen Wings of Deliverance. Diese wurde von ihm 1956 in Assembly of God Church unbenannt. In diesem Jahr gründete er die Kirche Peoples Temple in Indianapolis.</p>
-					  
+
 					</div>
 				  </div>
 				</li>
@@ -111,10 +111,10 @@
 				  </div>
 				</li>
 			</ul>
-		
+
 
 	</body>
 
 
-	
+
 </html>
