--- a/index.html
+++ b/index.html
@@ -2,105 +2,129 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="style.css">
-
+		<link rel="stylesheet" href="css/style.css">
+		<script src="javascript.js">
+		</script>
 	</head>
 	<body>
-
-
-			<div class="page-header">
-				<h1 id="timeline">Timeline</h1>
+		<div class="page-header">
+			<h1 id="timeline">
+				Jonestown
+			</h1>
+		</div>
+		<div class="timeline">
+			<div class="listing">
+				<div class="circle">
+				</div>
+				<div class="textbox">
+					<div class="timeline-heading">
+					  <h4 class="timeline-title">
+							Jim Jones’ Kindheit
+						</h4>
+					</div>
+					<div class="timeline-body">
+					  <p>
+							Jim Jones ist 1931 in Crete, Indiane geboren. Er wuchs mit seiner Schwester in einer sehr armen Familie auf, ihre Eltern vernachlässigte sie beide sehr, unter dem Leideten auch beide stark, zeichnete Jim Jones sehr stark. Jim Jones Mutter dachte nach seiner Geburt er sei der Messias der „das gesamte Unrecht der Welt wieder zurechtrücken würde. Jim Jones habe als Kind mit einem Messer eine Katze getötet, nach weiteren ähnlichen zwischenfällen nahm ihn seine Nachbarin bei sich auf, wo er den Rest seiner Kindheit verbrachte und mit dem fundamentalistischen Christentum in Berührung kam.
+						</p>
+					</div>
+				</div>
 			</div>
-			<ul class="timeline">
-				<li class="timeline-inverted">
-				  <div class="timeline-button"></i></div>
-				  <div class="timeline-panel">
+			<div class="listing">
+				<div class="circle">
+				</div>
+				<div class="textbox">
 					<div class="timeline-heading">
-					  <h4 class="timeline-title">Leben des Gründers Jim Jones</h4>
+					  <h4 class="timeline-title">
+							kirchliche Anfänge
+						</h4>
 					</div>
 					<div class="timeline-body">
-					  <p>Jim Jones wurde am 13. Mai 1931 in Crete, Indiana, geboren. Er wuchs in einem Bauerndorf unter ärmlichen Bedingungen auf. Seine Mutter war Fabrikarbeiterin und sein Vater arbeitsunfähig, da er im ersten Weltkrieg ein Opfer eines Senfgasangriffes wurde. Seine Mutter war überzeugt, dass Jim Jones der Messias ist, der alles Unrecht zurechtrücken würde. Nachdem einem Beinahe-Unglück wurde er von seiner Nachbarin aufgezogen. Diese brachte ihm den Glauben der Kirche des Nazareners bei. Hier kriegte er zum ersten Mal eine gefühlsmässige Zuwendung. Anfang der 1950er-Jahre wurde von seiner Heimatgemeinde ausgeschlossen, da er bei der Pfingstbewegung mitwirkte. Anfang der 1940er-Jahre zog Jim mit seiner Mutter in die Stadt Richmond. Während seiner Oberschuljahre begann Jim Jones sich für Rassengleichheit einzusetzen, anders als sein Vater. Nachdem er eine Ausbildung an der Universität nach kurzer Zeit beendete, begann er als Pfleger zu arbeiten. Dort lernte er Marceline Baldwin kennen, die er 1949 heiratete. Father Divine wurde für Jones wie eine Vaterfigur.</p>
+					  <p>
+							Als er dann um den 1950er Jahren bei der Pfingstbewegung ausgeschlossen wurde, beginnt er seine eigenen Predigen zu halten. Um zu überleben betreibt er auch nebenbei Geschäfte im Handel von Äffchen. Als er mit seiner Frau nach Indianapolis zog, begann er sich auch für Rassengleichheit einzusetzen. Hielt gemischtrassige Messen, was 1951 unerhört war. Es gab starke Kritik gegen diese Praktik, es mussten sogar Messen wegen Streitigkeiten die deswegen aufkamen, aufgelöst werden. Er nannte seine Kirche den „Peoples Temple“, begann seine Messen lebendiger, offener und sozialer zu gestalten, was seinem immerwachsenden Publikum gefiehl. Es kamen dutzende, dann Hunderte, später dann Tausende an seine Messen. Es wurde getanzt, gesungen, gebeten aber natürlich waren alle da für seine Predigen, wo er unheilbares heilte und seinen Glauben mitteilte.
+						</p>
 					</div>
-				  </div>
-				</li>
-				<li class="timeline-inverted">
-				  <div class="timeline-button"></div>
-				  <div class="timeline-panel">
+				</div>
+			</div>
+			<div class="listing">
+				<div class="circle">
+				</div>
+				<div class="textbox">
 					<div class="timeline-heading">
-					  <h4 class="timeline-title">Gründung der Sekte und der Kirche</h4>
+					  <h4 class="timeline-title">
+							Ukiah
+						</h4>
 					</div>
 					<div class="timeline-body">
-					  <p>1955 gründete Jim Jones eine Sekte mit dem Namen Wings of Deliverance. Diese wurde von ihm 1956 in Assembly of God Church unbenannt. In diesem Jahr gründete er die Kirche Peoples Temple in Indianapolis.</p>
-
+						<p>
+							In 1965 entschied Jim Jones den Peoples Temple und seine 81 Mitglieder nach Kalifornien zu ziehen, weil Kalifornien liberaler und weniger rassistisch war. Genauer entschied er sich für Ukiah, weil er in Esquire Magazine gelesen hat, es sein einer der 9 Orte, die sicher von einer Weltkatastrophe seien. Zu diesem Zeitpunkt zählte die Kirche genau 81 Mitglieder. In Ukiah erschuf Jim Jones die erste Version seines sozialistischen Traumes. Er hob alle soziale Hierarchien der Mitglieder auf, sodass sie alle auf der selben Ebene wären, jeder hatte seine Aufgaben die er machen musste etc. Da begann er auch ihnen seine extremere Doktrinen einzureden, zum Beispiel: alle Menschen seien Homosexuell, nur er sei Heterosexuell. Sex sei egoistisch und nicht im Sinne der Kirche. Jedoch hat er selber mehrere ziemlich agressive sexuelle Avancen gegenüber Männer gemacht.
+						</p>
 					</div>
-				  </div>
-				</li>
-				<li class="timeline-inverted">
-				  <div class="timeline-button"></div>
-				  <div class="timeline-panel">
+				</div>
+			</div>
+			<div class="listing">
+				<div class="circle">
+				</div>
+				<div class="textbox">
 					<div class="timeline-heading">
-					  <h4 class="timeline-title">Lehre der Sekte</h4>
+					  <h4 class="timeline-title">
+							Wachstum
+						</h4>
 					</div>
 					<div class="timeline-body">
-					  <p>Jim Jones wollte vorallem, dass die Menschen lernten, in vollkommener Harmonie unter den Rassen und ohne Gewalt und ohne Hass zu leben. Seine Lehren, die eine Mischung von christlichem Erlösungsglauben und Sozialismus war, sprachen vor allem Benachteiligte, Desorientierte und Bedürftige an. Die Rassengleichheitslehre verstärkte er, indem er selbst mit gutem Beispiel vorangehen wollte und adoptierte sieben Kinder unterschiedlicher Herkunft. </p>
+					  <p>
+							Jim Jones nahm 20% des Vermögens und Lohnes der Mitglieder, liess sie z.T. sogar ihr Haus verkaufen, damit er z.B. Reisecars kaufen konnte, die dann Touren quer durch die USA fuhren und Reden hielten ums so neue Mitglieder zu aufzunehmen. Damit er Einfluss über die Mitglieder behielt, gab es Verbot mit anderen Mitgliedern zu sprechen, gab ihnen immer mehr Arbeit, sodass sie meist nur 1-2 Std. Schlaf pro Nacht hatten. Seine Massnahmen waren erfolgreich, denn kaum gab es Diskussion oder Nachfrage über seine Entscheide. Er begann dann auch seine jetzt zu mehreren Tausenden angewachsenen Mitglieder für jegliche Proteste zur Verfügung zu stellen, was bei Politiker sehr beliebt war, weil sie von der Ethnie und vom Alter so divers waren. Als z.B. George Moscone sich zur Wahl zum Bürgermeister von San Francisco stellte, stellte Jim Jones ihm hunderte Mitglieder des Peoples Temple zur Verfügung, die für die politische Kampagne von Tür zu Tür gingen um mehr Stimmen für Moscone zu gewinnen. Moscone gewann um 4000 Stimmen und Jim Jones wurde von Moscone zum Chairman des Housing Committees.
+						</p>
 					</div>
-				  </div>
-				</li>
-				<li class="timeline-inverted">
-				<div class="timeline-button"></div>
-				  <div class="timeline-panel">
+				</div>
+			</div>
+			<div class="listing">
+				<div class="circle">
+				</div>
+				<div class="textbox">
 					<div class="timeline-heading">
-					  <h4 class="timeline-title">1965</h4>
+						<h4 class="timeline-title">
+							Wahnsinn
+						</h4>
 					</div>
 					<div class="timeline-body">
-					  <p>Im Jahre 1965 zogen Jim Jones und seinen bisher 150 treuen Mitglieder der Kirche auf eine Farm in Redwood Valley(etwa 200km nördlich von San Francisco). Dieser sei angeblich Atombombensicher gewesen. Dort verdoppelte sich die Anzahl seiner Anhänger. Jones gewann immer mehr Einfluss und wurde deswegen zum Sprecher des Bezirksschwurgerichts. Diese Zunahme an Einfluss verdankte er soziale Aktivitäten. Seine Sekte gewann immer mehr Mitglieder, vor allem dadurch, dass sie im Fillmore-Bezirk in San Francisco kostenlos Kinderbetreuung und Gesundheitstests anbot.</p>
+					  <p>
+							Etwa zur gleichen Zeit wie die Wahl Moscone verlangte Jim Jones in einer seiner Messen, dass alle Mitglieder von einem Punsch trinken, den er bereitgestellt hat. Nachdem alle getrunken hatten, sagte er der Punsch sei vergiftet. Panik brach aus, Eltern dachten dass ihre Kinder jetzt am sterben seien. Nach ein paar Minuten erklärte er dann es sei alles nur eine Glaubensprüfung gewesen und es sei doch kein Gift drin gewesen. Erste Skepsis kam jetzt auch unter den Mitgliedern auf. Jim Jones begann allgemein Paranoid zu werden, nahm Drogen, beauftragte Hardcore-Mitglieder zu seinen Bodyguards, wie ein eigener Secret Service. um 1976 herum begann er auch häufiger zu behaupten es gäbe Leute die der Kirche schaden wollen, konnte diese aber nicht benennen.
+						</p>
 					</div>
-				  </div>
-				</li>
-				<li class="timeline-inverted">
-				<div class="timeline-button"></div>
-				  <div class="timeline-panel">
+				</div>
+			</div>
+			<div class="listing">
+				<div class="circle">
+				</div>
+				<div class="textbox">
 					<div class="timeline-heading">
-						<h4 class="timeline-title">1974</h4>
+					  <h4 class="timeline-title">
+							Guyana
+						</h4>
 					</div>
 					<div class="timeline-body">
-					  <p>Platzhalter</p>
-					  <p>Luciano Pavarotti</p>
-					  <p>Platzhalter</p>
+					  <p>
+							Um 1974 fiel Jim Jones Entscheid, der Peoples Temple soll eine Art Kolonie, eine Utopie erschaffen. Dafür hat er die Dschungel Guyanas entschieden. Eine erste Crew wurde zusammengestellt, die einen guten Ort finden und erste Infrastruktur bauen soll. Mitte 1978 lebten schon rund 1100 Mitglieder in dieser Siedlung, die Jonestown genannt wurde. Es war selbstversorgend, es wurde den ganzen Tag gearbeitet. Es war ein Lautsprechersystem eingerichtet dass überall auf der Siedlung 24/24h Aufnahmen von Jim Jones laufen liess. Jim Jones sagte allen, er würde einen Test machen, indem er jeden Tag einen der Mitglieder, damit beauftragen, dass er so tun würde, dass er zurück nach Amerika zurück wollte, es aber nur ein Test sei und man muss diese Person melden, denn sonst hat man den Test nicht bestanden. Jim Jones Stimme wurde immer undeutlicher, allgemein roch er immer mehr nach Alkohol und er wurde von vielen verdächtigt, Drogen zu nehmen. Zuhause in Amerika kamen Gerüchte auf, es würden Mitglieder gegen ihren Willen in Jonestown gehalten. US-Kongressabgeordneter Leo Ryan, der dafür bekannt war, Sachen selber auf den Grund zu gehen, flog mit einer Kamera Crew der NBC nach Jonestown.
+						</p>
 					</div>
-				   </div>
-				</li>
-				<li class="timeline-inverted">
-				<div class="timeline-button"></div>
-				  <div class="timeline-panel">
+				</div>
+			</div>
+			<div class="listing">
+				<div class="circle">
+				</div>
+				<div class="textbox">
 					<div class="timeline-heading">
-					  <h4 class="timeline-title">1977</h4>
+					  <h4 class="timeline-title">
+							Eskalation
+						</h4>
 					</div>
 					<div class="timeline-body">
-					  <p>Platzhalter</p>
-					  <p>Luciano Pavarotti</p>
-					  <p>Platzhalter</p>
+					  <p>
+							Bei seiner Ankunft, am 17. November 1978, war er sehr skeptisch, konnte aber nachvollziehen, dass man das als Utopie sehen könnte. Er wurde warm begrüsst, ein paar Stunden in seinen Aufenthalt wurde ihm ein Zettel untergeschoben, auf dem jemand geschrieben hat, er sei hier gefangen. Am nächsten Tag, dem 18. November 1978, befragte die Nachrichten-Crew Mitglieder und es kam tatsächlich dabei heraus, dass es solche gab, die dort wie gefangen waren.
+						</p>
 					</div>
-				  </div>
-				</li>
-				<li class="timeline-inverted">
-					<div class="timeline-button"></div>
-					<div class="timeline-panel">
-					<div class="timeline-heading">
-					  <h4 class="timeline-title">1978</h4>
-					</div>
-					<div class="timeline-body">
-					  <p>Platzhalter</p>
-					  <p>Luciano Pavarotti</p>
-					  <p>Platzhalter</p>
-					</div>
-				  </div>
-				</li>
-			</ul>
-
-
+				</div>
+			</div>
+		</div>
 	</body>
-
-
-
 </html>
