--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="page-header">
-			<h1 id="timeline">
+			<h1 id="timeline-header">
 				Jonestown
 			</h1>
 		</div>
