--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		</script>
 	</head>
 	<body>
-		<div class="page-header">
+		<div class="page-header" >
 			<h1 id="timeline-header">
 				Jonestown
 			</h1>
@@ -24,9 +24,12 @@
 						</h4>
 					</div>
 					<div class="timeline-body">
+					  <img src="img/child-jim.jpg" alt="Jim child" width="25%">
 					  <p>
 							Jim Jones ist 1931 in Crete, Indiane geboren. Er wuchs mit seiner Schwester in einer sehr armen Familie auf, ihre Eltern vernachlässigte sie beide sehr, unter dem Leideten auch beide stark, zeichnete Jim Jones sehr stark. Jim Jones Mutter dachte nach seiner Geburt er sei der Messias der „das gesamte Unrecht der Welt wieder zurechtrücken würde. Jim Jones habe als Kind mit einem Messer eine Katze getötet, nach weiteren ähnlichen zwischenfällen nahm ihn seine Nachbarin bei sich auf, wo er den Rest seiner Kindheit verbrachte und mit dem fundamentalistischen Christentum in Berührung kam.
+								 
 						</p>
+						
 					</div>
 				</div>
 			</div>
@@ -40,6 +43,7 @@
 						</h4>
 					</div>
 					<div class="timeline-body">
+						<img src="img/jim-apes.jpg" alt="Jim apes" width="35%">
 					  <p>
 							Als er dann um den 1950er Jahren bei der Pfingstbewegung ausgeschlossen wurde, beginnt er seine eigenen Predigen zu halten. Um zu überleben betreibt er auch nebenbei Geschäfte im Handel von Äffchen. Als er mit seiner Frau nach Indianapolis zog, begann er sich auch für Rassengleichheit einzusetzen. Hielt gemischtrassige Messen, was 1951 unerhört war. Es gab starke Kritik gegen diese Praktik, es mussten sogar Messen wegen Streitigkeiten die deswegen aufkamen, aufgelöst werden. Er nannte seine Kirche den „Peoples Temple“, begann seine Messen lebendiger, offener und sozialer zu gestalten, was seinem immerwachsenden Publikum gefiehl. Es kamen dutzende, dann Hunderte, später dann Tausende an seine Messen. Es wurde getanzt, gesungen, gebeten aber natürlich waren alle da für seine Predigen, wo er unheilbares heilte und seinen Glauben mitteilte.
 						</p>
