--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 			<h1 id="timeline-header">
 				Jonestown
 			</h1>
+			<img>
+
+			</img>
 		</div>
 		<div class="timeline">
 			<div class="listing">
