--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 			<h1 id="timeline-header">
 				Jonestown
 			</h1>
-			<img>
-
+			<img id="dropdown-arrow" alt="dropdown-arrow" src="img/dropdown-arrow.svg" height="5vh">
 			</img>
 		</div>
 		<div class="timeline">
@@ -30,9 +29,9 @@
 					  <img id="image" src="img/child-jim.jpg" alt="Jim child" width="25%">
 					  <p>
 							Jim Jones ist 1931 in Crete, Indiane geboren. Er wuchs mit seiner Schwester in einer sehr armen Familie auf, ihre Eltern vernachlässigte sie beide sehr, unter dem Leideten auch beide stark, zeichnete Jim Jones sehr stark. Jim Jones Mutter dachte nach seiner Geburt er sei der Messias der „das gesamte Unrecht der Welt wieder zurechtrücken würde. Jim Jones habe als Kind mit einem Messer eine Katze getötet, nach weiteren ähnlichen zwischenfällen nahm ihn seine Nachbarin bei sich auf, wo er den Rest seiner Kindheit verbrachte und mit dem fundamentalistischen Christentum in Berührung kam.
-								 
+
 						</p>
-						
+
 					</div>
 				</div>
 			</div>
