--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<div class="page-header" >
+			
 			<h1 id="timeline-header">
 				Jonestown
 			</h1>
@@ -26,7 +27,7 @@
 						</h4>
 					</div>
 					<div class="timeline-body">
-					  <img id="image" src="img/child-jim.jpg" alt="Jim child" width="25%">
+					  <img class="bild" id="1" src="img/child-jim.jpg" alt="Jim child" width="25%">
 					  <p>
 							Jim Jones ist 1931 in Crete, Indiane geboren. Er wuchs mit seiner Schwester in einer sehr armen Familie auf, ihre Eltern vernachlässigte sie beide sehr, unter dem Leideten auch beide stark, zeichnete Jim Jones sehr stark. Jim Jones Mutter dachte nach seiner Geburt er sei der Messias der „das gesamte Unrecht der Welt wieder zurechtrücken würde. Jim Jones habe als Kind mit einem Messer eine Katze getötet, nach weiteren ähnlichen zwischenfällen nahm ihn seine Nachbarin bei sich auf, wo er den Rest seiner Kindheit verbrachte und mit dem fundamentalistischen Christentum in Berührung kam.
 
@@ -45,7 +46,7 @@
 						</h4>
 					</div>
 					<div class="timeline-body">
-						<img id="image" src="img/jim-apes.jpg" alt="Jim apes" width="35%">
+						<img class="bild" id="2" src="img/jim-apes.jpg" alt="Jim apes" width="35%">
 					  <p>
 							Als er dann um den 1950er Jahren bei der Pfingstbewegung ausgeschlossen wurde, beginnt er seine eigenen Predigen zu halten. Um zu überleben betreibt er auch nebenbei Geschäfte im Handel von Äffchen. Als er mit seiner Frau nach Indianapolis zog, begann er sich auch für Rassengleichheit einzusetzen. Hielt gemischtrassige Messen, was 1951 unerhört war. Es gab starke Kritik gegen diese Praktik, es mussten sogar Messen wegen Streitigkeiten die deswegen aufkamen, aufgelöst werden. Er nannte seine Kirche den „Peoples Temple“, begann seine Messen lebendiger, offener und sozialer zu gestalten, was seinem immerwachsenden Publikum gefiehl. Es kamen dutzende, dann Hunderte, später dann Tausende an seine Messen. Es wurde getanzt, gesungen, gebeten aber natürlich waren alle da für seine Predigen, wo er unheilbares heilte und seinen Glauben mitteilte.
 						</p>
@@ -110,7 +111,7 @@
 						</h4>
 					</div>
 					<div class="timeline-body">
-						<img id="image" src="img/village.jpg" alt="Jonestown" width="60%">
+						<img class="bild" id="3" src="img/village.jpg" alt="Jonestown" width="60%">
 					  <p>
 							Um 1974 fiel Jim Jones Entscheid, der Peoples Temple soll eine Art Kolonie, eine Utopie erschaffen. Dafür hat er die Dschungel Guyanas entschieden. Eine erste Crew wurde zusammengestellt, die einen guten Ort finden und erste Infrastruktur bauen soll. Mitte 1978 lebten schon rund 1100 Mitglieder in dieser Siedlung, die Jonestown genannt wurde. Es war selbstversorgend, es wurde den ganzen Tag gearbeitet. Es war ein Lautsprechersystem eingerichtet dass überall auf der Siedlung 24/24h Aufnahmen von Jim Jones laufen liess. Jim Jones sagte allen, er würde einen Test machen, indem er jeden Tag einen der Mitglieder, damit beauftragen, dass er so tun würde, dass er zurück nach Amerika zurück wollte, es aber nur ein Test sei und man muss diese Person melden, denn sonst hat man den Test nicht bestanden. Jim Jones Stimme wurde immer undeutlicher, allgemein roch er immer mehr nach Alkohol und er wurde von vielen verdächtigt, Drogen zu nehmen. Zuhause in Amerika kamen Gerüchte auf, es würden Mitglieder gegen ihren Willen in Jonestown gehalten. US-Kongressabgeordneter Leo Ryan, der dafür bekannt war, Sachen selber auf den Grund zu gehen, flog mit einer Kamera Crew der NBC nach Jonestown.
 						</p>
